[gd_scene load_steps=4 format=2]

[ext_resource path="res://friendScene.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="debug" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="headerData" type="Control" parent="debug"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debug/headerData"]
margin_left = 466.252
margin_top = 201.304
margin_right = 568.252
margin_bottom = 248.304
text = "header"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="debug/headerData"]
margin_left = 583.0
margin_top = 217.0
margin_right = 814.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textData" type="Control" parent="debug"]
margin_left = 4.45447
margin_top = 49.8903
margin_right = 44.4545
margin_bottom = 89.8903
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debug/textData"]
margin_left = 466.252
margin_top = 201.304
margin_right = 568.252
margin_bottom = 248.304
text = "text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="debug/textData"]
margin_left = 583.0
margin_top = 217.0
margin_right = 814.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconData" type="Control" parent="debug"]
margin_left = 5.3454
margin_top = 147.889
margin_right = 45.3454
margin_bottom = 187.889
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debug/IconData"]
margin_left = 466.252
margin_top = 201.304
margin_right = 568.252
margin_bottom = 248.304
text = "iconAnim"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="debug/IconData"]
margin_left = 583.0
margin_top = 217.0
margin_right = 814.0
margin_bottom = 241.0
placeholder_text = "default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="debug"]
margin_left = 586.0
margin_top = 411.0
margin_right = 795.0
margin_bottom = 471.0
text = "add"

[node name="Label" type="Label" parent="debug"]
margin_left = 569.877
margin_top = 84.1322
margin_right = 809.877
margin_bottom = 174.132
text = "syntax"
align = 1
valign = 1

[node name="friends" type="VBoxContainer" parent="."]
margin_right = 212.0
margin_bottom = 151.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPopup" type="PopupPanel" parent="."]
margin_left = 0.667419
margin_right = 363.667
margin_bottom = 239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="InfoPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 359.0
margin_bottom = 235.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="InfoPopup/Control"]
position = Vector2( 53.0412, 60.0187 )
frames = SubResource( 1 )

[node name="Header" type="Label" parent="InfoPopup/Control"]
margin_left = 94.0
margin_top = 5.0
margin_right = 345.0
margin_bottom = 41.0
autowrap = true

[node name="Text" type="Label" parent="InfoPopup/Control"]
margin_left = 109.0
margin_top = 51.0
margin_right = 349.0
margin_bottom = 172.0
autowrap = true

[node name="Bio" type="Label" parent="InfoPopup/Control"]
margin_left = 13.0
margin_top = 99.0
margin_right = 97.0
margin_bottom = 183.0
autowrap = true

[node name="Stats" type="Label" parent="InfoPopup/Control"]
margin_left = 15.0
margin_top = 185.0
margin_right = 350.0
margin_bottom = 229.0
autowrap = true

[connection signal="pressed" from="debug/Button" to="." method="_on_Button_pressed"]
